Assignment/2023103712_Tryphaena Janee S_Service Desk Agent_new/2023103712_Tryphaena Janee S_Service Desk Agent/SourceCode/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servicedesk
  labels:
    pod-security.kubernetes.io/enforce: restricted
